--- a/ChangeLog
+++ b/ChangeLog
@@ -8,7 +8,7 @@ EmilPRO (2):
 	
 	* Correct build of binutils on newer compilers (build without -Werror)
 
-	-- Simon Kagstrom <simon.kagstrom@gmail.com>
+	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Sat Nov 23 15:37:06 CET 2013
 
 EmilPRO (1):
 	* Initial release
