ChangeLog: Update for the next version

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+EmilPRO (4):
+
+	-- Simon Kagstrom <simon.kagstrom@gmail.com>
+
 EmilPRO (3):
 	* Gtk GUI: Partailly fix the remember window-size-on-close feature
 
